--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
       - 2023-05-01-multithreading.md
   - 算法: 
     - 代码随想录:
+      - 2023-05-16-代码随想录-Day16.md
       - 2023-05-15-代码随想录-Day15.md
       - 2023-05-14-代码随想录-Day14.md
 
