--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,18 @@ theme:
     - navigation.footer
     - navigation.tabs.sticky
     - navigation.path
+  palette: 
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   
 nav:
   - Home: index.md
