--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,8 @@ nav:
       - 2023-04-29-英雄算法联盟-Day29.md
 
     - 训练营:
+      - 训练营-Day3.md
+      - 训练营-Day2.md
       - 2023-05-15-训练营-Day1.md
 site_name: Yiping's Notes
 repo_url: https://github.com/Yiping-Z/notes
