--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,4 +55,4 @@ use_directory_urls: false
 extra:
   social:
     - icon: octicons/mark-github-16
-      link: https://yiping-z.github.io/
+      link: https://github.com/Yiping-Z
