--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
       - 2023-05-01-multithreading.md
   - 算法: 
     - 代码随想录:
+      - 代码随想录-Day21.md
       - 代码随想录-Day20.md
       - 代码随想录-Day19.md
       - 代码随想录-Day18.md
