--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
       - 2023-05-01-multithreading.md
   - 算法: 
     - 代码随想录:
+      - 代码随想录-Day30.md
       - 代码随想录-Day29.md
       - 代码随想录-Day28.md
       - 代码随想录-Day27.md
