--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 theme:
   name: material
+  favicon: 'images/profile.jpeg'
   features:
     - navigation.tracking
     - navigation.tabs
@@ -33,6 +34,7 @@ nav:
       - 2023-05-01-multithreading.md
   - 算法: 
     - 代码随想录:
+      - 代码随想录-Day32.md
       - 代码随想录-Day31.md
       - 代码随想录-Day30.md
       - 代码随想录-Day29.md
