--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
       - 2023-05-01-multithreading.md
   - 算法: 
     - 代码随想录:
+      - 代码随想录-Day33.md
       - 代码随想录-Day32.md
       - 代码随想录-Day31.md
       - 代码随想录-Day30.md
