--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - Home: index.md
   - 框架:
     - Spring: 
+      - spring_javaguide.md
       - 2023-05-07-spring.md
       - 2023-05-01-spring.md
 
