--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,8 @@ nav:
   - 语言:
     - Java多线程: 
       - 2023-05-01-multithreading.md
+    - Java基础:
+      - java_javaguide.md
   - 算法: 
     - 代码随想录:
       - 代码随想录-Day35.md
