--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
       
   - 算法: 
     - 代码随想录:
+      - 代码随想录-Day36.md
       - 代码随想录-Day35.md
       - 代码随想录-Day34.md
       - 代码随想录-Day33.md
