--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,7 @@ nav:
       - Introduction to Psychology (Yale):
         - psychology_history_of_psychology.md
         - psychology_research_design.md
+        - psychology_the_brain.md
 
 site_name: Yiping's Notes
 repo_url: https://github.com/Yiping-Z/notes
