--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,7 @@ nav:
         - psychology_history_of_psychology.md
         - psychology_research_design.md
         - psychology_the_brain.md
+        - psychology_freud.md
 
 site_name: Yiping's Notes
 repo_url: https://github.com/Yiping-Z/notes
